// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
    provider = "prisma-client-js"
    output   = "./.prisma/client"
}

generator dbml {
    provider = "prisma-dbml-generator"
}

// datasource db {
//     provider = "postgresql"
//     url      = env("DATABASE_URL")
// }

datasource db {
  provider = "sqlite"
  url      = "file:./dev.sqlite"
}

model Conference {
    id       Int    @id @default(autoincrement())
    imageUrl String
    title    String
    talks    Talk[]
}

model Talk {
    id           Int        @id @default(autoincrement())
    speaker      String
    speakerImage String
    description  String
    Conference   Conference @relation(fields: [conferenceId], references: [id])
    conferenceId Int
    questions    Question[]
}

model Question {
    id       Int    @id @default(autoincrement())
    userId   String
    name     String
    imageUrl String
    text     String
    Talk     Talk   @relation(fields: [talkId], references: [id])
    talkId   Int
    likes    Like[]
}

model Like {
    id         Int      @id @default(autoincrement())
    userId     String
    questionId Int
    Question   Question @relation(fields: [questionId], references: [id])
    @@unique([userId, questionId], name: "userQuestionUniqueKey")
}
