//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Conference {
  id Int [pk, increment]
  imageUrl String [not null]
  title String [not null]
  talks Talk [not null]
}

Table Talk {
  id Int [pk, increment]
  speaker String [not null]
  speakerImage String [not null]
  description String [not null]
  Conference Conference [not null]
  conferenceId Int [not null]
  questions Question [not null]
}

Table Question {
  id Int [pk, increment]
  userId String [not null]
  name String [not null]
  imageUrl String [not null]
  text String [not null]
  Talk Talk [not null]
  talkId Int [not null]
  likes Like [not null]
}

Table Like {
  id Int [pk, increment]
  userId String [not null]
  questionId Int [not null]
  Question Question [not null]

  indexes {
    (userId, questionId) [unique]
  }
}

Ref: Talk.conferenceId > Conference.id

Ref: Question.talkId > Talk.id

Ref: Like.questionId > Question.id